--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "reactstrap": "^8.0.1",
     "formik": "^1.5.8",
     "react": "^16.9.0",
     "react-conflux": "^0.0.2-beta.6",
